[PDI-9809] [PDI-9556] [PDI-9955] [PDI-9866] [PDI-9443] [PDI-8229] Major refactor of Cassandra steps.

--- a/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -6,16 +6,21 @@ CassandraInputDialog.Port.Label=Cassandra port
 CassandraInputDialog.Timeout.Label=Socket timeout
 CassandraInputDialog.Keyspace.Label=Keyspace
 CassandraInputDialog.OutputTuples.Label=Output <key, column, timestamp> tuples
+CassandraInputDialog.OutputTuples.TipText=CQL 3 automatically outputs dynamic column families in tuple mode (i.e. a wide row is transposed to multiple CQL 3 rows)
 CassandraInputDialog.UseCompression.Label=Use query compression
 CassandraInputDialog.CQL.Label=CQL
 CassandraInputDialog.Position.Label=Line {0} Column {1}
 CassandraInputDialog.Schema.Button=Show schema
 CassandraInputDialog.User.Label=Username
 CassandraInputDialog.Password.Label=Password
+CassandraInputDialog.UseCQL3.Label=Use CQL version 3
 CassandraInputDialog.Thrift.Label=Use Thrift I/O
 
 CassandraInputDialog.Error.ProblemGettingSchemaInfo.Title=Problem getting schema info
 CassandraInputDialog.Error.ProblemGettingSchemaInfo.Message=An error occurred while getting the schema information:
+
+CassandraInputDialog.PreviewSize.DialogTitle=Enter preview size
+CassandraInputDialog.PreviewSize.DialogMessage=Enter the number of rows to preview\:
 
 CassandraInput.Error.NoSelectInQuery=No SELECT in query!
 CassandraInput.Error.QueryTermination=Query must be terminated by a ';'
@@ -23,8 +28,9 @@ CassandraInput.Error.UnableToParseLimitClause=Unable to parse LIMIT clause in qu
 CassandraInput.Error.MustSpecifyAColumnFamily=Must specify a column family using a 'FROM' clause
 CassandraInput.Error.UnableToParseFirstClause=Unable to parse FIRST clause in query: {0}
 CassandraInput.Error.NoFromClauseInQuery=SELECT query does not seem to contain the name of a column family
-CassandraInput.Error.NonExistentColumnFamily=The column family {0} does not seem to exist in the keyspace {1}
+CassandraInput.Error.NonExistentColumnFamily=The column family {0} does not seem to exist in the keyspace {1} - perhaps it is a CQL 3 table?
 CassandraInput.Error.QueryWontProduceOutputFields=It doesn't look like the query will produce any output fields!
+CassandraInput.Error.TupleModeMustBeUsedForNonCQLIO=Tuple mode must be used for non-CQL IO
 
 CassandraInput.Info.DefaultColumnValidator=Query specifies column {0}, however this column is not in the column family schema. The default column family validator will be used
 CassandraInput.Info.UnableToRetrieveColumnMetaData=Unable to connect to retrieve column meta data for {0} at this stage
@@ -33,3 +39,5 @@ CassandraInput.Info.GettintMetaData=Getting meta data for column family {0}
 CassandraInput.Info.ExecutingQuery=Executing query {0} {1} ...
 CassandraInput.Info.UsingGZIPCompression=(using GZIP query compression)
 CassandraInput.Info.ClosingConnection=Closing connection ...
+CassandraInput.Info.UsingConnectionOptions=Using connection options: {0}
+
