--- a/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -23,22 +23,32 @@ CassandraOutputDialog.BatchSize.Label=Commit batch size
 CassandraOutputDialog.BatchSize.TipText=Number of rows to send with each commit
 CassandraOutputDialog.BatchInsertTimeout.Label=Batch insert timeout
 CassandraOutputDialog.BatchInsertTimeout.TipText=Number of milliseconds to wait for a batch to complete inserting before splitting into smaller sub-batches. Set lower than the socket timeout or leave empty for no timeout.
+CassandraOutputDialog.UseCQL3.Label=Use CQL version 3
 CassandraOutputDialog.UseThriftIO.Label=Use Thrift I/O
 CassandraOutputDialog.UseThriftIO.TipText=Use Thrift for I/O instead of CQL
 
 CassandraOutputDialog.SubBatchSize.Label=Sub batch size
 CassandraOutputDialog.SubBatchSize.TipText=Size (# rows) of the sub-batches to split the batch into if a timeout occurs
+CassandraOutputDialog.UnloggedBatch.Label=Insert unlogged batches
+CassandraOutputDialog.UnloggedBatch.TipText=Turn on for non-atomic (faster) batch writes
 
 CassandraOutputDialog.KeyField.Label=Incoming field to use as the key
+CassandraOutputDialog.KeyFields.Label=Incoming fields to use as the key
 CassandraOutputDialog.GetFields.Button=Get fields
+CassandraOutputDialog.SelectFields.Button=Select fields
 CassandraOutputDialog.CreateColumnFamily.Label=Create column family
 CassandraOutputDialog.CreateColumnFamily.TipText=Create column family (table) if it doesn't already exist
+CassandraOutputDialog.CreateTableWithClause.Label=Table creation WITH clause
+CassandraOutputDialog.CreateTableWithClause.TipText=Optional WITH clause to include in CQL format
 CassandraOutputDialog.TruncateColumnFamily.Label=Truncate column family
 CassandraOutputDialog.TruncateColumnFamily.TipText=Remove all data from column family (table) before inserting
 CassandraOutputDialog.UpdateColumnFamilyMetaData.Label=Update column family meta data
 CassandraOutputDialog.UpdateColumnFamilyMetaData.TipText=Update column family meta data with any new incoming fields
 CassandraOutputDialog.InsertFieldsNotInColumnFamMetaData.Label=Insert fields not in column family meta data
 CassandraOutputDialog.InsertFieldsNotInColumnFamMetaData.TipText=Whether or not to insert unknown incoming fields (has no affect if update column family meta data is turned on)
+
+CassandraOutputDialog.SelectKeyFieldsDialog.Title=Available incoming fields
+CassandraOutputDialog.SelectKeyFieldsDialog.Message=Choose fields for compound key
 
 CassandraOutputDialog.UseCompression.Label=Use compression
 CassandraOutputDialog.UseCompression.TipText=Compress batch inserts
@@ -50,6 +60,7 @@ CassandraOutputDialog.Error.ProblemGettingSchemaInfo.Message=An error occurred w
 CassandraOutputData.Message.NoIncomingFields=There doesn't seem to be any fields coming into this step
 CassandraOutputData.Message.NoIncomingFields.Title=No incoming fields available
 
+CassandraOutput.Message.UsingConnectionOptions=Using connection options: {0}
 CassandraOutput.Message.MinimumTimeout=Using minimum batch insert timeout of 500 milliseconds
 CassandraOutput.Message.ConnectingForSchemaOperations=Connecting to Cassandra node at {0} : {1} using keyspace {2} for schema operations
 CassandraOutput.Message.GettingMetaData=Getting meta data for column family {0}
@@ -78,3 +89,4 @@ CassandraOutput.Error.SkippingRowNoNonNullValues=Skipping row with key "{0}" bec
 CassandraOutput.Error.TimeoutReached=Timeout reached waiting for commit
 CassandraOutput.Error.UnableToGetKeyspaceMetaData=Unable to get meta data on column families from keyspace
 CassandraOutput.Error.CantUpdateMetaData=Can't update meta data - unable to find column family "{0}"
+EnterCQLDialog.DontComplainIfCQLFails.Label=Don't complain if CQL fails
