[PDI-9808] As a Cassandra user, I want the ability to do lookups in Cassandra using CQL.

--- a/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -8,6 +8,7 @@ CassandraInputDialog.Keyspace.Label=Keyspace
 CassandraInputDialog.OutputTuples.Label=Output <key, column, timestamp> tuples
 CassandraInputDialog.OutputTuples.TipText=CQL 3 automatically outputs dynamic column families in tuple mode (i.e. a wide row is transposed to multiple CQL 3 rows)
 CassandraInputDialog.UseCompression.Label=Use query compression
+CassandraInputDialog.ExecuteForEachRow.Label=Execute query for each incoming row
 CassandraInputDialog.CQL.Label=CQL
 CassandraInputDialog.Position.Label=Line {0} Column {1}
 CassandraInputDialog.Schema.Button=Show schema
@@ -31,6 +32,9 @@ CassandraInput.Error.NoFromClauseInQuery=SELECT query does not seem to contain t
 CassandraInput.Error.NonExistentColumnFamily=The column family {0} does not seem to exist in the keyspace {1} - perhaps it is a CQL 3 table?
 CassandraInput.Error.QueryWontProduceOutputFields=It doesn't look like the query will produce any output fields!
 CassandraInput.Error.TupleModeMustBeUsedForNonCQLIO=Tuple mode must be used for non-CQL IO
+
+CassandraInputDialog.Warning.Message.CassandraQueryContainsUnresolvedVarsFieldSubs.PreviewTitle=Unable to preview
+CassandraInputDialog.Warning.Message.CassandraQueryContainsUnresolvedVarsFieldSubs=Query contains unresolved variables or field substitutions
 
 CassandraInput.Info.DefaultColumnValidator=Query specifies column {0}, however this column is not in the column family schema. The default column family validator will be used
 CassandraInput.Info.UnableToRetrieveColumnMetaData=Unable to connect to retrieve column meta data for {0} at this stage
