[PDI-9954] Ability to set the Cassandra Time To Live (TTL) for a row being inserted. Also snuck in a small fix for setting the consistency level on batch inserts - in CQL 2 this was specified in the "BATCH" statement; in CQL 3 it is done at the driver level.

--- a/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -32,6 +32,8 @@ CassandraOutputDialog.SubBatchSize.TipText=Size (# rows) of the sub-batches to s
 CassandraOutputDialog.UnloggedBatch.Label=Insert unlogged batches
 CassandraOutputDialog.UnloggedBatch.TipText=Turn on for non-atomic (faster) batch writes
 
+CassandraOutputDialog.TTL.Label=Time to live (TTL)
+
 CassandraOutputDialog.KeyField.Label=Incoming field to use as the key
 CassandraOutputDialog.KeyFields.Label=Incoming fields to use as the key
 CassandraOutputDialog.GetFields.Button=Get fields
@@ -90,3 +92,9 @@ CassandraOutput.Error.TimeoutReached=Timeout reached waiting for commit
 CassandraOutput.Error.UnableToGetKeyspaceMetaData=Unable to get meta data on column families from keyspace
 CassandraOutput.Error.CantUpdateMetaData=Can't update meta data - unable to find column family "{0}"
 EnterCQLDialog.DontComplainIfCQLFails.Label=Don't complain if CQL fails
+CassandraOutput.TTLUnit.None=None
+CassandraOutput.TTLUnit.Seconds=Seconds
+CassandraOutput.TTLUnit.Minutes=Minutes
+CassandraOutput.TTLUnit.Hours=Hours
+CassandraOutput.TTLUnit.Days=Days
+
