Fixed CQL Data Type conversion so that TYPE_TIMESTAMP is converted to a timestamp instead of a blob.

--- a/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -8,6 +8,7 @@ CassandraColumnMetaData.Error.CantFindADeserializerForType=Can't find a deserial
 CassandraColumnMetaData.Error.CQLQueryToObtainMetaData=CQL query to obtain meta data on key and default validator for table {0} did not return the expected single row from system.schema_columnfamilies
 LegacyKeyspace.Error.UnableToGetMetaDataForKeyspace=Unable to get meta data for keyspace {0}
 LegacyKeyspace.Message.CreatingColumnFamily=Creating column family {0}: {1}
+LegacyKeyspace.Message.ValueMetaConversion=Converting type {0} to CQL Type {1}
 LegacyKeyspace.Error.UnableToGetColumnFamilyMetaData=Unable to get schema information for column family {0}
 LegacyKeyspace.Error.CantUpdateMetaData=Unable to update meta data for column family {0}
 LegacyKeyspace.Message.TruncateColumnFamily=Truncating column family {0}
