[PDI-11046] Cassandra: Input step with ReversedType Comparator.

--- a/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -4,8 +4,9 @@ CassandraColumnMetaData.Error.CantConvertBinaryToCQL=Can't convert binary/serial
 CassandraColumnMetaData.Error.CantConvertType=Not sure how to encode PDI field {0} of type {1} to CQL-compatible values
 CassandraColumnMetaData.Error.CantConvertTypeThrift=Don't know how to convert {0} to {1}
 CassandraColumnMetaData.Error.UnableToConvertValue=Unable to convert value for {0}
-CassandraColumnMetaData.Error.CantFindADeserializerForType=Can't find a deserializer for type {0}
+CassandraColumnMetaData.Error.CantFindADeserializerForType=Can't find a deserializer for type
 CassandraColumnMetaData.Error.CQLQueryToObtainMetaData=CQL query to obtain meta data on key and default validator for table {0} did not return the expected single row from system.schema_columnfamilies
+CassandraColumnMetaData.Error.UnsupportedCassandraType=Unsupported Cassandra type:
 LegacyKeyspace.Error.UnableToGetMetaDataForKeyspace=Unable to get meta data for keyspace {0}
 LegacyKeyspace.Message.CreatingColumnFamily=Creating column family {0}: {1}
 LegacyKeyspace.Error.UnableToGetColumnFamilyMetaData=Unable to get schema information for column family {0}
