--- a/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -7,6 +7,7 @@ CassandraColumnMetaData.Error.UnableToConvertValue=Unable to convert value for {
 CassandraColumnMetaData.Error.CantFindADeserializerForType=Can't find a deserializer for type
 CassandraColumnMetaData.Error.CQLQueryToObtainMetaData=CQL query to obtain meta data on key and default validator for table {0} did not return the expected single row from system.schema_columnfamilies
 CassandraColumnMetaData.Error.UnsupportedCassandraType=Unsupported Cassandra type:
+CassandraColumnMetaData.Error.Cassandra1ClientAgainstCassandra2Server=It looks like we are using Cassandra 1.x client libraries against a Cassandra 2.x cluster - the TimestampType is only available in Cassandra 2.x
 LegacyKeyspace.Error.UnableToGetMetaDataForKeyspace=Unable to get meta data for keyspace {0}
 LegacyKeyspace.Message.CreatingColumnFamily=Creating column family {0}: {1}
 LegacyKeyspace.Message.ValueMetaConversion=Converting type {0} to CQL Type {1}
