[PDI-12135] Support the collection data type in Cassandra Input step.

--- a/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -21,6 +21,7 @@ LegacyCQLRowHandler.Error.TimeoutReached=Commit timeout reached
 LegacyCQLRowHandler.Error.NoKeyspaceSpecified=No keyspace specified
 LegacyCQLRowHandler.Error.UnableToObtainAKeyValueForRow=Unable to obtain a key value for the row
 LegacyCQLRowHandler.Error.UnableToFindKeyFieldName=Unable to find key field name: {0} in the output row meta data
+LegacyCQLRowHandler.Error.CantHandleAdditionalCollectionsThatAreNotOfTypeText=Can only handle collections beyond the primary collection that are of type text
 LegacyNonCQLRowHandler.Error.TimeoutReached=Commit timeout reached
 LegacyNonCQLRowHandler.Error.NoKeyspaceSpecified=No keyspace specified
 LegacyNonCQLRowHandler.Error.MaximumNumberOfConsecutiveTimeoutsExceeded=Maximum number (5) of consecutive timeouts exceeded
