PDI-7516 Specifying large limit in Cassandra input step causes timeout errors

--- a/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -4,6 +4,7 @@ CassandraInputDialog.StepName.Label=Step name
 CassandraInputDialog.Hostname.Label=Cassandra host
 CassandraInputDialog.Port.Label=Cassandra port
 CassandraInputDialog.Timeout.Label=Socket timeout
+CassandraInputDialog.TransportMaxLength.Label=Transport max length
 CassandraInputDialog.Keyspace.Label=Keyspace
 CassandraInputDialog.OutputTuples.Label=Output <key, column, timestamp> tuples
 CassandraInputDialog.OutputTuples.TipText=CQL 3 automatically outputs dynamic column families in tuple mode (i.e. a wide row is transposed to multiple CQL 3 rows)
