[PDI-8731][Tests] - Added IT and made some cosmetic changes

--- a/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -24,5 +24,9 @@ SSTableOutput.Error.FailedToCloseWriter=Failed to close writer
 SSTableOutput.Error.NoPathToYAML=No path to the yaml file has been specified!
 SSTableOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified!
 SSTableOutput.Error.OutputDirDoesntExist=Output dir doesn't exist and cannot be created
+SSTableOutput.Error.JVMExitProtection=Could not setup protection from JVM exit caused by invalid cassandra config.
+SSTableOutput.Error.InvalidConfig=Cassandra config is invalid. Check log for details.
+SSTableOutput.Error.WriterInitFailed=Writer initialization failed.
 
 SSTableOutput.Message.YAMLPath=Using yaml file: {0}
+SSTableOutput.Message.DefaultBufferSize=Cannot determine buffer size to use, default settings will be used
