[CHECKSTYLE]: Fixed checkstyle violations for the project.
1)Fixed usual checkstyle violations;
2)Empty catch block - fixed via logging with the message on debug level.

--- a/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/src/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -17,6 +17,7 @@ LegacyKeyspace.Message.TruncateColumnFamily=Truncating column family {0}
 LegacyKeyspace.Error.OnlySingleColumnKeysAreSupported=Only single column keys are supported by CQL 2
 CassandraConnection.Error.NoKeyspaceHasBeenSet=No keyspace has been set
 LegacyCQLRowHandler.Message.UsingConsistencyLevel=Using consistency level {0}
+LegacyCQLRowHandler.Error.NoValidConsistencyLevelSpecified=Invalid consistency level: {0}. Using default one: {1}.
 LegacyCQLRowHandler.Error.TimeoutReached=Commit timeout reached
 LegacyCQLRowHandler.Error.NoKeyspaceSpecified=No keyspace specified
 LegacyCQLRowHandler.Error.UnableToObtainAKeyValueForRow=Unable to obtain a key value for the row
@@ -27,3 +28,4 @@ LegacyNonCQLRowHandler.Error.NoKeyspaceSpecified=No keyspace specified
 LegacyNonCQLRowHandler.Error.MaximumNumberOfConsecutiveTimeoutsExceeded=Maximum number (5) of consecutive timeouts exceeded
 LegacyNonCQLRowHandler.Error.UnableToObtainAKeyValueForRow=Unable to obtain a key value for the row
 LegacyNonCQLRowHandler.Error.UnableToFindKeyFieldName=Unable to find key field name: {0} in the output row meta data
+
