--- a/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -73,6 +73,7 @@ CassandraOutput.Message.CommittingBatch=Committing batch to column family {0} ({
 CassandraOutput.Message.WillNowTrySplittingIntoSubBatches=Will now try splitting into sub-batches...
 CassandraOutput.Message.ClosingConnection=Closing connection...
 CassandraOutput.Error.CantParseTimeout=Can't parse batch insert timeout - setting to 10,000
+CassandraOutput.Error.CantParseTTL=Cannot parse TTL={0}. No ttl has been added into the connection options.
 CassandraOutput.Error.CantParseSubBatchSize=Can't parse sub batch size -  setting to 10
 CassandraOutput.Error.MissingConnectionDetails=Some connection details are missing
 CassandraOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified
