--- a/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -46,3 +46,16 @@ CassandraInput.Info.UsingGZIPCompression=(using GZIP query compression)
 CassandraInput.Info.ClosingConnection=Closing connection ...
 CassandraInput.Info.UsingConnectionOptions=Using connection options: {0}
 
+CassandraInput.Injection.CASSANDRA_HOST=CASSANDRA_HOST
+CassandraInput.Injection.CASSANDRA_PORT=CASSANDRA_PORT
+CassandraInput.Injection.USER_NAME=USER_NAME
+CassandraInput.Injection.PASSWORD=PASSWORD
+CassandraInput.Injection.CASSANDRA_KEYSPACE=CASSANDRA_KEYSPACE
+CassandraInput.Injection.USE_QUERY_COMPRESSION=USE_QUERY_COMPRESSION
+CassandraInput.Injection.CQL_QUERY=CQL_QUERY
+CassandraInput.Injection.OUTPUT_KEY_VALUE_TIMESTAMP_TUPLES=OUTPUT_KEY_VALUE_TIMESTAMP_TUPLES
+CassandraInput.Injection.USE_THRIFT_IO=USE_THRIFT_IO
+CassandraInput.Injection.USE_CQL_VERSION_3=USE_CQL_VERSION_3
+CassandraInput.Injection.EXECUTE_FOR_EACH_ROW=EXECUTE_FOR_EACH_ROW
+CassandraInput.Injection.SOCKET_TIMEOUT=SOCKET_TIMEOUT
+CassandraInput.Injection.TRANSPORT_MAX_LENGTH=TRANSPORT_MAX_LENGTH
