[BACKLOG-7959] - Add Metadata Injection (MDI) support to the SSTable Output step
[BACKLOG-7959] - Add Metadata Injection (MDI) support to the SSTable Output step - test

--- a/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -22,3 +22,10 @@ SSTableOutput.Error.NoPathToYAML=No path to the yaml file has been specified!
 SSTableOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified!
 
 SSTableOutput.Message.YAMLPath=Using yaml file: {0}
+
+SSTableOutput.Injection.YAML_FILE_PATH=YAML_FILE_PATH
+SSTableOutput.Injection.DIRECTORY=DIRECTORY
+SSTableOutput.Injection.CASSANDRA_KEYSPACE=CASSANDRA_KEYSPACE
+SSTableOutput.Injection.COLUMN_FAMILY=COLUMN_FAMILY
+SSTableOutput.Injection.KEY_FIELD=KEY_FIELD
+SSTableOutput.Injection.BUFFER_SIZE=BUFFER_SIZE
