--- a/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -99,30 +99,30 @@ CassandraOutput.TTLUnit.Minutes=Minutes
 CassandraOutput.TTLUnit.Hours=Hours
 CassandraOutput.TTLUnit.Days=Days
 
-CassandraOutput.Injection.CASSANDRA_HOST=CASSANDRA_HOST
-CassandraOutput.Injection.CASSANDRA_PORT=CASSANDRA_PORT
-CassandraOutput.Injection.USER_NAME=USER_NAME
-CassandraOutput.Injection.PASSWORD=PASSWORD
-CassandraOutput.Injection.CASSANDRA_KEYSPACE=CASSANDRA_KEYSPACE
-CassandraOutput.Injection.SCHEMA_HOST=SCHEMA_HOST
-CassandraOutput.Injection.SCHEMA_PORT=SCHEMA_PORT
-CassandraOutput.Injection.COLUMN_FAMILY=COLUMN_FAMILY
-CassandraOutput.Injection.CONSISTENCY_LEVEL=CONSISTENCY_LEVEL
-CassandraOutput.Injection.BATCH_SIZE=BATCH_SIZE
-CassandraOutput.Injection.USE_UNLOGGED_BATCH=USE_UNLOGGED_BATCH
-CassandraOutput.Injection.USE_QUERY_COMPRESSION=USE_QUERY_COMPRESSION
-CassandraOutput.Injection.CREATE_COLUMN_FAMILY=CREATE_COLUMN_FAMILY
-CassandraOutput.Injection.CREATE_TABLE_WITH_CLAUSE=CREATE_TABLE_WITH_CLAUSE
-CassandraOutput.Injection.KEY_FIELD=KEY_FIELD
-CassandraOutput.Injection.SOCKET_TIMEOUT=SOCKET_TIMEOUT
-CassandraOutput.Injection.BATCH_TIMEOUT=BATCH_TIMEOUT
-CassandraOutput.Injection.SUB_BATCH_SIZE=SUB_BATCH_SIZE
-CassandraOutput.Injection.INSERT_FIELDS_NOT_IN_META=INSERT_FIELDS_NOT_IN_META
-CassandraOutput.Injection.UPDATE_CASSANDRA_META=UPDATE_CASSANDRA_META
-CassandraOutput.Injection.TRUNCATE_COLUMN_FAMILY=TRUNCATE_COLUMN_FAMILY
-CassandraOutput.Injection.APRIORI_CQL=APRIORI_CQL
-CassandraOutput.Injection.DONT_COMPLAIN_IF_APRIORI_CQL_FAILS=DONT_COMPLAIN_IF_APRIORI_CQL_FAILS
-CassandraOutput.Injection.USE_THRIFT_IO=USE_THRIFT_IO
-CassandraOutput.Injection.USE_CQL_VERSION_3=USE_CQL_VERSION_3
-CassandraOutput.Injection.TTL=TTL
-CassandraOutput.Injection.TTL_UNIT=TTL_UNIT
+CassandraOutput.Injection.CASSANDRA_HOST=The Cassandra hostname.
+CassandraOutput.Injection.CASSANDRA_PORT=The Cassandra port number.
+CassandraOutput.Injection.USER_NAME=The username required to access the Cassandra cluster.
+CassandraOutput.Injection.PASSWORD=The password required to access the Cassandra cluster.
+CassandraOutput.Injection.CASSANDRA_KEYSPACE=The Cassandra keyspace to use.
+CassandraOutput.Injection.SCHEMA_HOST=The Cassandra schema hostname.
+CassandraOutput.Injection.SCHEMA_PORT=The Cassandra schema port number.
+CassandraOutput.Injection.COLUMN_FAMILY=The column family to write to.
+CassandraOutput.Injection.CONSISTENCY_LEVEL=The optional consistency level to use.
+CassandraOutput.Injection.BATCH_SIZE=The number of rows to insert at a time.
+CassandraOutput.Injection.USE_UNLOGGED_BATCH=Set this flag to use unlogged batches.
+CassandraOutput.Injection.USE_QUERY_COMPRESSION=Set this flag to compress CQL queries.
+CassandraOutput.Injection.CREATE_COLUMN_FAMILY=Set this flag to create the specified column family if it doesn't exist.
+CassandraOutput.Injection.CREATE_TABLE_WITH_CLAUSE=Additions to the table creation WITH clause.
+CassandraOutput.Injection.KEY_FIELD=The field to use as the key for inserts.
+CassandraOutput.Injection.SOCKET_TIMEOUT=The optional connection timeout specified in milliseconds.
+CassandraOutput.Injection.BATCH_TIMEOUT=The optional CQL batch timeout specified in milliseconds.
+CassandraOutput.Injection.SUB_BATCH_SIZE=The batch split size to use when a CQL batch timeout occurs.
+CassandraOutput.Injection.INSERT_FIELDS_NOT_IN_META=Set this flag to insert fields that are not in Cassandra's metadata for the table.
+CassandraOutput.Injection.UPDATE_CASSANDRA_META=Set this flag to update the column family metadata with incoming fields.
+CassandraOutput.Injection.TRUNCATE_COLUMN_FAMILY=Set this flag to truncate the column family before inserting.
+CassandraOutput.Injection.APRIORI_CQL=The apriori CQL statements to execute before inserting the first row.
+CassandraOutput.Injection.DONT_COMPLAIN_IF_APRIORI_CQL_FAILS=Set this flag to ignore a prior CQL statement exceptions.
+CassandraOutput.Injection.USE_THRIFT_IO=Set this flag to use Thrift I/O.
+CassandraOutput.Injection.USE_CQL_VERSION_3=Set this flag to use CQL version 3.
+CassandraOutput.Injection.TTL=The TTL (time-to-live) for all fields inserted.
+CassandraOutput.Injection.TTL_UNIT=The unit of measure for the TTL (seconds, minutes, hours, days).
