--- a/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -22,3 +22,10 @@ SSTableOutput.Error.NoPathToYAML=No path to the yaml file has been specified!
 SSTableOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified!
 
 SSTableOutput.Message.YAMLPath=Using yaml file: {0}
+
+SSTableOutput.Injection.YAML_FILE_PATH=The path to the Cassandra YAML file.
+SSTableOutput.Injection.DIRECTORY=The directory to write output to.
+SSTableOutput.Injection.CASSANDRA_KEYSPACE=The Cassandra keyspace to use.
+SSTableOutput.Injection.COLUMN_FAMILY=The column family (table) to write to.
+SSTableOutput.Injection.KEY_FIELD=The incoming field to use as the key for inserts.
+SSTableOutput.Injection.BUFFER_SIZE=The size of the write buffer specified in megabytes.
