[BACKLOG-7935] - Add Metadata Injection (MDI) support to the Cassandra Output Step - fix UI message

--- a/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -111,13 +111,13 @@ CassandraOutput.Injection.CONSISTENCY_LEVEL=The optional consistency level to us
 CassandraOutput.Injection.BATCH_SIZE=The number of rows to insert at a time.
 CassandraOutput.Injection.USE_UNLOGGED_BATCH=Set this flag to use unlogged batches.
 CassandraOutput.Injection.USE_QUERY_COMPRESSION=Set this flag to compress CQL queries.
-CassandraOutput.Injection.CREATE_COLUMN_FAMILY=Set this flag to create the specified column family if it doesn't exist.
+CassandraOutput.Injection.CREATE_COLUMN_FAMILY=Set this flag to create the specified column family if it doesn''t exist.
 CassandraOutput.Injection.CREATE_TABLE_WITH_CLAUSE=Additions to the table creation WITH clause.
 CassandraOutput.Injection.KEY_FIELD=The field to use as the key for inserts.
 CassandraOutput.Injection.SOCKET_TIMEOUT=The optional connection timeout specified in milliseconds.
 CassandraOutput.Injection.BATCH_TIMEOUT=The optional CQL batch timeout specified in milliseconds.
 CassandraOutput.Injection.SUB_BATCH_SIZE=The batch split size to use when a CQL batch timeout occurs.
-CassandraOutput.Injection.INSERT_FIELDS_NOT_IN_META=Set this flag to insert fields that are not in Cassandra's metadata for the table.
+CassandraOutput.Injection.INSERT_FIELDS_NOT_IN_META=Set this flag to insert fields that are not in Cassandra''s metadata for the table.
 CassandraOutput.Injection.UPDATE_CASSANDRA_META=Set this flag to update the column family metadata with incoming fields.
 CassandraOutput.Injection.TRUNCATE_COLUMN_FAMILY=Set this flag to truncate the column family before inserting.
 CassandraOutput.Injection.APRIORI_CQL=The apriori CQL statements to execute before inserting the first row.
