[BACKLOG-19123][BACKLOG-19126] Get/Set Fields button issues

--- a/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -11,7 +11,7 @@ SSTableOutputDialog.ColumnFamily.Label=Column family (table)
 SSTableOutputDialog.KeyField.Label=Incoming field to use as the key
 SSTableOutputDialog.KeyFields.Label=Incoming fields to use as the key
 SSTableOutputDialog.GetFields.Button=Get fields
-SSTableOutputDialog.SelectFields.Button=Select fields
+SSTableOutputDialog.SelectFields.Button=Set Fields
 SSTableOutputDialog.BufferSize.Label=Buffer (MB)
 SSTableOutputDialog.UseCQL3.Label=Use CQL version 3
 
