[BACKLOG-21304] Upgrades plugin to Cassandra 3.11.1 and Datastax Cassandra driver to 3.4.0

--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -15,17 +15,14 @@ CassandraOutputDialog.Keyspace.Label=Keyspace
 CassandraOutputDialog.SchemaHostname.Label=Host for schema updates
 CassandraOutputDialog.SchemaHostname.TipText=Send all schema modifications to this host
 CassandraOutputDialog.SchemaPort.Label=Port for schema updates
-CassandraOutputDialog.ColumnFamily.Label=Column family (table) to write to
-CassandraOutputDialog.GetColFam.Button=Get column family names
+CassandraOutputDialog.Table.Label=Table to write to
+CassandraOutputDialog.GetTable.Button=Get table names
 CassandraOutputDialog.Consistency.Label=Consistency level
 CassandraOutputDialog.Consistency.Label.TipText=Write/read consistency level (e.g. ONE, QUORUM, etc.). Leave empty for default.
 CassandraOutputDialog.BatchSize.Label=Commit batch size
 CassandraOutputDialog.BatchSize.TipText=Number of rows to send with each commit
 CassandraOutputDialog.BatchInsertTimeout.Label=Batch insert timeout
 CassandraOutputDialog.BatchInsertTimeout.TipText=Number of milliseconds to wait for a batch to complete inserting before splitting into smaller sub-batches. Set lower than the socket timeout or leave empty for no timeout.
-CassandraOutputDialog.UseCQL3.Label=Use CQL version 3
-CassandraOutputDialog.UseThriftIO.Label=Use Thrift I/O
-CassandraOutputDialog.UseThriftIO.TipText=Use Thrift for I/O instead of CQL
 
 CassandraOutputDialog.SubBatchSize.Label=Sub batch size
 CassandraOutputDialog.SubBatchSize.TipText=Size (# rows) of the sub-batches to split the batch into if a timeout occurs
@@ -38,16 +35,16 @@ CassandraOutputDialog.KeyField.Label=Incoming field to use as the key
 CassandraOutputDialog.KeyFields.Label=Incoming fields to use as the key
 CassandraOutputDialog.GetFields.Button=Get fields
 CassandraOutputDialog.SelectFields.Button=Select fields
-CassandraOutputDialog.CreateColumnFamily.Label=Create column family
-CassandraOutputDialog.CreateColumnFamily.TipText=Create column family (table) if it doesn't already exist
+CassandraOutputDialog.CreateTable.Label=Create table
+CassandraOutputDialog.CreateTable.TipText=Create table if it doesn't already exist
 CassandraOutputDialog.CreateTableWithClause.Label=Table creation WITH clause
 CassandraOutputDialog.CreateTableWithClause.TipText=Optional WITH clause to include in CQL format
-CassandraOutputDialog.TruncateColumnFamily.Label=Truncate column family
-CassandraOutputDialog.TruncateColumnFamily.TipText=Remove all data from column family (table) before inserting
-CassandraOutputDialog.UpdateColumnFamilyMetaData.Label=Update column family meta data
-CassandraOutputDialog.UpdateColumnFamilyMetaData.TipText=Update column family meta data with any new incoming fields
-CassandraOutputDialog.InsertFieldsNotInColumnFamMetaData.Label=Insert fields not in column family meta data
-CassandraOutputDialog.InsertFieldsNotInColumnFamMetaData.TipText=Whether or not to insert unknown incoming fields (has no affect if update column family meta data is turned on)
+CassandraOutputDialog.TruncateTable.Label=Truncate table
+CassandraOutputDialog.TruncateTable.TipText=Remove all data from table before inserting
+CassandraOutputDialog.UpdateTableMetaData.Label=Update table meta data
+CassandraOutputDialog.UpdateTableMetaData.TipText=Update table meta data with any new incoming fields
+CassandraOutputDialog.InsertFieldsNotInTableMetaData.Label=Insert fields not in table meta data
+CassandraOutputDialog.InsertFieldsNotInTableMetaData.TipText=Whether or not to insert unknown incoming fields (has no affect if update table meta data is turned on)
 
 CassandraOutputDialog.SelectKeyFieldsDialog.Title=Available incoming fields
 CassandraOutputDialog.SelectKeyFieldsDialog.Message=Choose fields for compound key
@@ -65,22 +62,22 @@ CassandraOutputData.Message.NoIncomingFields.Title=No incoming fields available
 CassandraOutput.Message.UsingConnectionOptions=Using connection options: {0}
 CassandraOutput.Message.MinimumTimeout=Using minimum batch insert timeout of 500 milliseconds
 CassandraOutput.Message.ConnectingForSchemaOperations=Connecting to Cassandra node at {0} : {1} using keyspace {2} for schema operations
-CassandraOutput.Message.GettingMetaData=Getting meta data for column family {0}
-CassandraOutput.Message.ExecutingAprioriCQL=Executing the following CQL prior to writing to column family {0}\n\n{1}
+CassandraOutput.Message.GettingMetaData=Getting meta data for table {0}
+CassandraOutput.Message.ExecutingAprioriCQL=Executing the following CQL prior to writing to table {0}\n\n{1}
 CassandraOutput.Message.StoppedSkippingBatch=Stopped, skipping batch...
 CassandraOutput.Message.SkippingEmptyBatch=Empty batch, skipping processing...
-CassandraOutput.Message.CommittingBatch=Committing batch to column family {0} ({1} rows)
+CassandraOutput.Message.CommittingBatch=Committing batch to table {0} ({1} rows)
 CassandraOutput.Message.WillNowTrySplittingIntoSubBatches=Will now try splitting into sub-batches...
 CassandraOutput.Message.ClosingConnection=Closing connection...
 CassandraOutput.Error.CantParseTimeout=Can't parse batch insert timeout - setting to 10,000
 CassandraOutput.Error.CantParseTTL=Cannot parse TTL={0}. No ttl has been added into the connection options.
 CassandraOutput.Error.CantParseSubBatchSize=Can't parse sub batch size -  setting to 10
 CassandraOutput.Error.MissingConnectionDetails=Some connection details are missing
-CassandraOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified
+CassandraOutput.Error.NoTableSpecified=No table has been specified
 CassandraOutput.Error.NoIncomingKeySpecified=The incoming field to use as the key for inserting has not been specified
 CassandraOutput.Error.CantFindKeyField=Can't find key field {0} in the incoming data
 CassandraOutput.Error.NeedAtLeastOneFieldAppartFromKey=Need at least one incoming field apart from the key
-CassandraOutput.Error.ColumnFamilyDoesNotExist=Column family {0} does not exist in keyspace {1}. Turn on the create column family option if you want to have this column family created automatically using incoming field meta data.
+CassandraOutput.Error.TableDoesNotExist=Column family {0} does not exist in keyspace {1}. Turn on the create table option if you want to have this table created automatically using incoming field meta data.
 CassandraOutput.Error.CantParseBatchSize=Can't parse batch size - setting to 100
 CassandraOutput.Error.NoBatchSizeSet=No batch size has been specified
 CassandraOutput.Error.InitializationProblem=A problem occurred during initialization of the step
@@ -91,7 +88,7 @@ CassandraOutput.Error.SkippingRowNullKey=Skipping this row because the key is nu
 CassandraOutput.Error.SkippingRowNoNonNullValues=Skipping row with key "{0}" because there are no non-null values!
 CassandraOutput.Error.TimeoutReached=Timeout reached waiting for commit
 CassandraOutput.Error.UnableToGetKeyspaceMetaData=Unable to get meta data on column families from keyspace
-CassandraOutput.Error.CantUpdateMetaData=Can't update meta data - unable to find column family "{0}"
+CassandraOutput.Error.CantUpdateMetaData=Can't update meta data - unable to find table "{0}"
 EnterCQLDialog.DontComplainIfCQLFails.Label=Don't complain if CQL fails
 CassandraOutput.TTLUnit.None=None
 CassandraOutput.TTLUnit.Seconds=Seconds
@@ -106,20 +103,20 @@ CassandraOutput.Injection.PASSWORD=The password required to access the Cassandra
 CassandraOutput.Injection.CASSANDRA_KEYSPACE=The Cassandra keyspace to use.
 CassandraOutput.Injection.SCHEMA_HOST=The Cassandra schema hostname.
 CassandraOutput.Injection.SCHEMA_PORT=The Cassandra schema port number.
-CassandraOutput.Injection.COLUMN_FAMILY=The column family to write to.
+CassandraOutput.Injection.TABLE=The table to write to.
 CassandraOutput.Injection.CONSISTENCY_LEVEL=The optional consistency level to use.
 CassandraOutput.Injection.BATCH_SIZE=The number of rows to insert at a time.
 CassandraOutput.Injection.USE_UNLOGGED_BATCH=Set this flag to use unlogged batches.
 CassandraOutput.Injection.USE_QUERY_COMPRESSION=Set this flag to compress CQL queries.
-CassandraOutput.Injection.CREATE_COLUMN_FAMILY=Set this flag to create the specified column family if it doesn''t exist.
+CassandraOutput.Injection.CREATE_TABLE=Set this flag to create the specified table if it doesn''t exist.
 CassandraOutput.Injection.CREATE_TABLE_WITH_CLAUSE=Additions to the table creation WITH clause.
 CassandraOutput.Injection.KEY_FIELD=The field to use as the key for inserts.
 CassandraOutput.Injection.SOCKET_TIMEOUT=The optional connection timeout specified in milliseconds.
 CassandraOutput.Injection.BATCH_TIMEOUT=The optional CQL batch timeout specified in milliseconds.
 CassandraOutput.Injection.SUB_BATCH_SIZE=The batch split size to use when a CQL batch timeout occurs.
 CassandraOutput.Injection.INSERT_FIELDS_NOT_IN_META=Set this flag to insert fields that are not in Cassandra''s metadata for the table.
-CassandraOutput.Injection.UPDATE_CASSANDRA_META=Set this flag to update the column family metadata with incoming fields.
-CassandraOutput.Injection.TRUNCATE_COLUMN_FAMILY=Set this flag to truncate the column family before inserting.
+CassandraOutput.Injection.UPDATE_CASSANDRA_META=Set this flag to update the table metadata with incoming fields.
+CassandraOutput.Injection.TRUNCATE_TABLE=Set this flag to truncate the table before inserting.
 CassandraOutput.Injection.APRIORI_CQL=The apriori CQL statements to execute before inserting the first row.
 CassandraOutput.Injection.DONT_COMPLAIN_IF_APRIORI_CQL_FAILS=Set this flag to ignore a prior CQL statement exceptions.
 CassandraOutput.Injection.USE_THRIFT_IO=Set this flag to use Thrift I/O.
