--- a/core/src/main/resources/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/cassandra/legacy/messages/messages_en_US.properties
@@ -1,19 +1,19 @@
 CassandraColumnMetaData.Error.UnableToGetMetaDataForKeyspace=Unable to get meta data on keyspace {0}
-CassandraColumnMetaData.Error.UnableToFindRequestedColumnFamily=Unable to find requested column family {0} in keyspace {1}
+CassandraColumnMetaData.Error.UnableToFindRequestedTable=Unable to find requested table {0} in keyspace {1}
 CassandraColumnMetaData.Error.CantConvertBinaryToCQL=Can't convert binary/serializable data to CQL-compatible values
 CassandraColumnMetaData.Error.CantConvertType=Not sure how to encode PDI field {0} of type {1} to CQL-compatible values
 CassandraColumnMetaData.Error.CantConvertTypeThrift=Don't know how to convert {0} to {1}
 CassandraColumnMetaData.Error.UnableToConvertValue=Unable to convert value for {0}
 CassandraColumnMetaData.Error.CantFindADeserializerForType=Can't find a deserializer for type
-CassandraColumnMetaData.Error.CQLQueryToObtainMetaData=CQL query to obtain meta data on key and default validator for table {0} did not return the expected single row from system.schema_columnfamilies
+CassandraColumnMetaData.Error.CQLQueryToObtainMetaData=CQL query to obtain meta data on key and default validator for table {0} did not return the expected single row from system_schema.tables
 CassandraColumnMetaData.Error.UnsupportedCassandraType=Unsupported Cassandra type:
 CassandraColumnMetaData.Error.Cassandra1ClientAgainstCassandra2Server=It looks like we are using Cassandra 1.x client libraries against a Cassandra 2.x cluster - the TimestampType is only available in Cassandra 2.x
 LegacyKeyspace.Error.UnableToGetMetaDataForKeyspace=Unable to get meta data for keyspace {0}
-LegacyKeyspace.Message.CreatingColumnFamily=Creating column family {0}: {1}
+LegacyKeyspace.Message.CreatingTable=Creating table {0}: {1}
 LegacyKeyspace.Message.ValueMetaConversion=Converting type {0} to CQL Type {1}
-LegacyKeyspace.Error.UnableToGetColumnFamilyMetaData=Unable to get schema information for column family {0}
-LegacyKeyspace.Error.CantUpdateMetaData=Unable to update meta data for column family {0}
-LegacyKeyspace.Message.TruncateColumnFamily=Truncating column family {0}
+LegacyKeyspace.Error.UnableToGetTableMetaData=Unable to get schema information for table {0}
+LegacyKeyspace.Error.CantUpdateMetaData=Unable to update meta data for table {0}
+LegacyKeyspace.Message.TruncateTable=Truncating table {0}
 LegacyKeyspace.Error.OnlySingleColumnKeysAreSupported=Only single column keys are supported by CQL 2
 CassandraConnection.Error.NoKeyspaceHasBeenSet=No keyspace has been set
 LegacyCQLRowHandler.Message.UsingConsistencyLevel=Using consistency level {0}
