--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandrainput/messages/messages_en_US.properties
@@ -6,8 +6,8 @@ CassandraInputDialog.Port.Label=Cassandra port
 CassandraInputDialog.Timeout.Label=Socket timeout
 CassandraInputDialog.TransportMaxLength.Label=Transport max length
 CassandraInputDialog.Keyspace.Label=Keyspace
-CassandraInputDialog.OutputTuples.Label=Output <key, column, timestamp> tuples
-CassandraInputDialog.OutputTuples.TipText=CQL 3 automatically outputs dynamic column families in tuple mode (i.e. a wide row is transposed to multiple CQL 3 rows)
+CassandraInputDialog.OutputTuples.Label=Output <key, table, timestamp> tuples
+CassandraInputDialog.OutputTuples.TipText=CQL 3 automatically outputs dynamic tables in tuple mode (i.e. a wide row is transposed to multiple CQL 3 rows)
 CassandraInputDialog.UseCompression.Label=Use query compression
 CassandraInputDialog.ExecuteForEachRow.Label=Execute query for each incoming row
 CassandraInputDialog.CQL.Label=CQL
@@ -15,8 +15,6 @@ CassandraInputDialog.Position.Label=Line {0} Column {1}
 CassandraInputDialog.Schema.Button=Show schema
 CassandraInputDialog.User.Label=Username
 CassandraInputDialog.Password.Label=Password
-CassandraInputDialog.UseCQL3.Label=Use CQL version 3
-CassandraInputDialog.Thrift.Label=Use Thrift I/O
 
 CassandraInputDialog.Error.ProblemGettingSchemaInfo.Title=Problem getting schema info
 CassandraInputDialog.Error.ProblemGettingSchemaInfo.Message=An error occurred while getting the schema information:
@@ -27,20 +25,20 @@ CassandraInputDialog.PreviewSize.DialogMessage=Enter the number of rows to previ
 CassandraInput.Error.NoSelectInQuery=No SELECT in query!
 CassandraInput.Error.QueryTermination=Query must be terminated by a ';'
 CassandraInput.Error.UnableToParseLimitClause=Unable to parse LIMIT clause in query: {0} - using default limit of 10,000
-CassandraInput.Error.MustSpecifyAColumnFamily=Must specify a column family using a 'FROM' clause
+CassandraInput.Error.MustSpecifyATable=Must specify a table using a 'FROM' clause
 CassandraInput.Error.UnableToParseFirstClause=Unable to parse FIRST clause in query: {0}
-CassandraInput.Error.NoFromClauseInQuery=SELECT query does not seem to contain the name of a column family
-CassandraInput.Error.NonExistentColumnFamily=The column family {0} does not seem to exist in the keyspace {1} - perhaps it is a CQL 3 table?
+CassandraInput.Error.NoFromClauseInQuery=SELECT query does not seem to contain the name of a table
+CassandraInput.Error.NonExistentTable=The table {0} does not seem to exist in the keyspace {1} - perhaps it is a CQL 3 table?
 CassandraInput.Error.QueryWontProduceOutputFields=It doesn't look like the query will produce any output fields!
 CassandraInput.Error.TupleModeMustBeUsedForNonCQLIO=Tuple mode must be used for non-CQL IO
 
 CassandraInputDialog.Warning.Message.CassandraQueryContainsUnresolvedVarsFieldSubs.PreviewTitle=Unable to preview
 CassandraInputDialog.Warning.Message.CassandraQueryContainsUnresolvedVarsFieldSubs=Query contains unresolved variables or field substitutions
 
-CassandraInput.Info.DefaultColumnValidator=Query specifies column {0}, however this column is not in the column family schema. The default column family validator will be used
+CassandraInput.Info.DefaultColumnValidator=Query specifies column {0}, however this column is not in the table schema. The default table validator will be used
 CassandraInput.Info.UnableToRetrieveColumnMetaData=Unable to connect to retrieve column meta data for {0} at this stage
 CassandraInput.Info.Connecting=Connecting to Cassandra node at {0} : {1} using keyspace {2} ...
-CassandraInput.Info.GettintMetaData=Getting meta data for column family {0}
+CassandraInput.Info.GettintMetaData=Getting meta data for table {0}
 CassandraInput.Info.ExecutingQuery=Executing query {0} {1} ...
 CassandraInput.Info.UsingGZIPCompression=(using GZIP query compression)
 CassandraInput.Info.ClosingConnection=Closing connection ...
@@ -54,8 +52,6 @@ CassandraInput.Injection.CASSANDRA_KEYSPACE=The Cassandra keyspace to use.
 CassandraInput.Injection.USE_QUERY_COMPRESSION=Set this flag to compress CQL queries.
 CassandraInput.Injection.CQL_QUERY=The CQL query to execute.
 CassandraInput.Injection.OUTPUT_KEY_VALUE_TIMESTAMP_TUPLES=Set this flag to output in tuple mode.
-CassandraInput.Injection.USE_THRIFT_IO=Set this flag to use Thrift I/O.
-CassandraInput.Injection.USE_CQL_VERSION_3=Set this flag to use CQL version 3.
 CassandraInput.Injection.EXECUTE_FOR_EACH_ROW=Specify this flag to execute a query for each input row.
 CassandraInput.Injection.SOCKET_TIMEOUT=The optional connection timeout specified in milliseconds.
 CassandraInput.Injection.TRANSPORT_MAX_LENGTH=The optional maximum object size that can be sent.
