--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -7,7 +7,7 @@ SSTableOutputDialog.Directory.Label=Directory
 SSTableOutputDialog.Directory.Button=Browse
 SSTableOutputDialog.YAML.Button=Browse
 SSTableOutputDialog.Keyspace.Label=Keyspace
-SSTableOutputDialog.ColumnFamily.Label=Column family (table)
+SSTableOutputDialog.Table.Label=Table
 SSTableOutputDialog.KeyField.Label=Incoming field to use as the key
 SSTableOutputDialog.KeyFields.Label=Incoming fields to use as the key
 SSTableOutputDialog.GetFields.Button=Get fields
@@ -22,7 +22,7 @@ SSTableOutput.Error.NoKeySpecified=The incoming field to use as the key for inse
 SSTableOutput.Error.FailedToProcessRow=Failed to process row
 SSTableOutput.Error.FailedToCloseWriter=Failed to close writer
 SSTableOutput.Error.NoPathToYAML=No path to the yaml file has been specified!
-SSTableOutput.Error.NoColumnFamilySpecified=No column family (table) has been specified!
+SSTableOutput.Error.NoTableSpecified=No table has been specified!
 SSTableOutput.Error.OutputDirDoesntExist=Output dir doesn't exist and cannot be created
 SSTableOutput.Error.JVMExitProtection=Could not setup protection from JVM exit caused by invalid cassandra config.
 SSTableOutput.Error.InvalidConfig=Cassandra config is invalid. Check log for details.
@@ -34,7 +34,7 @@ SSTableOutput.Message.DefaultBufferSize=Cannot determine buffer size to use, def
 SSTableOutput.Injection.YAML_FILE_PATH=The path to the Cassandra YAML file.
 SSTableOutput.Injection.DIRECTORY=The directory to write output to.
 SSTableOutput.Injection.CASSANDRA_KEYSPACE=The Cassandra keyspace to use.
-SSTableOutput.Injection.COLUMN_FAMILY=The column family (table) to write to.
+SSTableOutput.Injection.TABLE=The table to write to.
 SSTableOutput.Injection.KEY_FIELD=The incoming field to use as the key for inserts.
 SSTableOutput.Injection.BUFFER_SIZE=The size of the write buffer specified in megabytes.
 
