[PDI-16888] Title bar of several steps doesn't have the correspondent name of the step

--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandraoutput/messages/messages_en_US.properties
@@ -1,4 +1,4 @@
-CassandraOutputDialog.Shell.Title=Cassandra Output
+CassandraOutputDialog.Shell.Title=Cassandra output
 CassandraOutputDialog.StepName.Label=Step name
 
 CassandraOutputDialog.Tab.Connection=Connection
