--- a/core/src/main/resources/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
+++ b/core/src/main/resources/org/pentaho/di/trans/steps/cassandrasstableoutput/messages/messages_en_US.properties
@@ -1,4 +1,4 @@
-SSTableOutputDialog.Shell.Title=SSTable Output
+SSTableOutputDialog.Shell.Title=SSTable output
 SSTableOutputDialog.StepName.Label=Step name
 
 SSTableOutputDialog.YAML.Label=Cassandra yaml file
